forwardingService/installForwarding/destRules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: forwarding-istio-mtls
spec:
  host: forwarding.bookinfo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: forwarding
spec:
  host: forwarding
  subsets:
    - name: v1
      labels:
        version: v1
