forwardingService/installForwarding/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: forwarding
spec:
  hosts:
    - "*"
  gateways:
    - forwarding-gateway
  http:
    - match:
        - uri:
            exact: /forward
        - uri:
            exact: /info
        - uri:
      route:
        - destination:
            host: forwarding
#            subset: v1
            port:
              number: 3000
